--- a/Journal/Pathfinder World Tracker/templates/factions.html
+++ b/Journal/Pathfinder World Tracker/templates/factions.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../dist/css/main.min.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <style>
         /* Ensure the app container takes full height */
         html, body, .app-container {
